crates/graphite/tests/ui/graph_unknown_edge_label.stderr
error[E0599]: no method named `not_a_real_edge` found for mutable reference `&mut OrgChartBuilder` in the current scope
  --> tests/ui/graph_unknown_edge_label.rs:20:18
   |
16 |       let _ = graphite::graph!(OrgChart {
   |  _____________-
17 | |         tanaka: Employee { name: "田中".into(), id: 1 },
18 | |         sales: Department { name: "営業".into() },
19 | |
20 | |         tanaka -[not_a_real_edge]-> sales,
   | |                 -^^^^^^^^^^^^^^^ method not found in `&mut OrgChartBuilder`
   | |_________________|
   |
